client/src/containers/search/ParkContainer.css
.park {
    margin-top: 10px;
    width: 75vw;
}

.mainCard {
    background-color: rgb(65, 65, 65);
    min-width: 75vw;
    max-width: 100vw;
}

.parkTitle {
    color: white;
    text-align: center;
    width: 100%;
    margin-top: 10px;
}

@media screen and (max-width: 500px) {
    .mainCard {
      width: 100vw;
    }
  }

